java/java-tests/testData/psi/parser-full/commonParsing/RefParamsAfterError.java
class C {
  BCSSChild.<error descr="">BCSSCServiceClassRef</error> fd = null;
}